Reproducible Research Peer Assessment 1

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,138 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible Research Peer Assessment 1"
+author: "Avinash"
+date: "October 17, 2015"
+output: html_document
 ---
 
+## Abstract
+Personal activity monitoring devices (e.g. Fitbit, Nike Fuelband, or Jawbone Up) can collect significant amount of data about body movement easily. This data if properly analyzed, can reveal one's behavioral patterns and may offer ways to improve one's health,.  This report will attempt to answer some of the questions on the behavioral patterns.
+
+## Data 
+The dataset used for this project is [Activity monitoring data](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip), data collected from a Personal activity monitoring device.
+
+The variables included in this dataset are:
+
+* **steps**: Number of steps taking in a 5-minute interval (missing values are coded as NA)
+* **date**: The date on which the measurement was taken in YYYY-MM-DD format
+* **interval**: Identifier for the 5-minute interval in which measurement was taken
+The dataset is stored in a comma-separated-value (CSV) file and there are a total of 17,568 observations in this dataset.
 
 ## Loading and preprocessing the data
+```{r}
+if (!file.exists("./activity.csv")) {
+
+    # download the datafile and unzip it
+  
+  file_url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+  file_name <- "repdata_data_activity.zip"
+  download.file(file_url, file_name)
+
+  unzip(file_name)
+  
+  # Read the datafile and load to a dataframe **activity_data**
+}  
+  amd <- read.csv("activity.csv")
 
 
+```
 
 ## What is mean total number of steps taken per day?
+#### 1. Total steps per day (grouped for each day)
+```{r}
+  
+  # 1. Total steps per day (grouped for each day)
+  spd <- aggregate(steps ~ date, amd, sum)
+  
+```
 
+#### 2. Histogram
+```{r, echo=FALSE}
+#2 Make a histogram of the total number of steps taken each day
+hist(spd$steps, main = "Total number of steps per day", xlab = "Day", col = "Grey")
+```
 
+#### 3. The mean and median of the total number of steps taken per day
+```{r}
+mean(spd$steps, na.rm = TRUE)
+median(spd$steps, na.rm = TRUE)
+```
 
 ## What is the average daily activity pattern?
+```{r}
+adap <- aggregate(steps ~ interval, amd, mean,na.rm = TRUE)
+```
+#### 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r, echo=FALSE}
+plot(adap$interval,adap$steps, type="l", xlab="Interval", 
+     ylab="Average number of steps", main="Time-series plot of the average number of steps per intervals")
+```
 
-
+####2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+mstp <- which(adap$steps == max(adap$steps))
+mint <- adap[mstp, 1]
+adap[adap$steps == max(adap$steps),]
+```
 
 ## Imputing missing values
+####1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r}
+nastp <- sum(is.na(amd$steps))
+nastp
+```
+####2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+```{r}
+amdn <- amd 
+for (i in 1:nrow(amdn)) {
+  if (is.na(amdn$steps[i])) {
+    amdn$steps[i] <- adap[which(amdn$interval[i] == adap$interval), ]$steps
+  }
+}
+naamdn <- sum(is.na(amdn))
+naamdn
+```
+####3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+head(amdn)
+```
+####4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r}
+spdn <- aggregate(steps ~ date, amdn, sum)
+head(spdn)
+```
 
+```{r, echo=FALSE}
+hist(spdn$steps, main = "Total number of steps per day", xlab = "Day", col = "Grey")
+```
 
-
+```{r}
+mean(spdn$steps, na.rm = TRUE)
+median(spdn$steps, na.rm = TRUE)
+```
 ## Are there differences in activity patterns between weekdays and weekends?
+####1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+```{r}
+amdn$date <- as.Date(amdn$date)
+```
+*create a vector of weekdays
+```{r}
+weekdays1 <- c('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday')
+```
+*Use `%in%` and `weekdays` to create a logical vector
+*#convert to `factor` and specify the `levels/labels`
+```{r}
+amdn$wDay <- factor((weekdays(amdn$date) %in% weekdays1), levels=c(FALSE, TRUE), labels=c('weekend', 'weekday')) 
+```
+
+####2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+```{r}
+adapn <- aggregate(amdn$steps,by = list(amdn$date,amdn$wDay,amdn$interval),FUN = "mean")
+names(adapn) <- c("day", "wDay", "interval", "mean")
+head(adapn)
+```
+
+```{r, echo=FALSE}
+library(lattice)
+xyplot(mean ~ interval | wDay, adapn, type = "l", layout = c(1, 2), xlab = "Interval", ylab = "Number of steps")
+```
